--- a/dyndns updater/Properties/DynDNSSettings.config
+++ b/dyndns updater/Properties/DynDNSSettings.config
@@ -8,7 +8,7 @@
     <Setting Name="Token" Type="System.String" Scope="User">
       <Value Profile="(Default)"></Value>
     </Setting>
-    <Setting Name="IP" Type="System.String" Scope="User">
+    <Setting Name="IPType" Type="System.String" Scope="User">
       <Value Profile="(Default)"></Value>
     </Setting>
   </Settings>
