--- a/dyndns updater/app.config
+++ b/dyndns updater/app.config
@@ -2,13 +2,20 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DynDNS_Updater.Properties.Release" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="DynDNS_Updater.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DynDNS_Updater.Properties.Release" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="DynDNS_Updater.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
+        <DynDNS_Updater.Properties.Release>
+            <setting name="SystemUpdateInterval" serializeAs="String">
+                <value>5000</value>
+            </setting>
+        </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="SystemUpdateInterval" serializeAs="String">
                 <value>500</value>
@@ -16,6 +23,20 @@
         </DynDNS_Updater.Properties.Settings>
     </applicationSettings>
     <userSettings>
+        <DynDNS_Updater.Properties.Release>
+            <setting name="Username" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Token" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IPType" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UpdateSettings" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="Username" serializeAs="String">
                 <value />
