--- a/dyndns updater/DynDNS Updater.csproj
+++ b/dyndns updater/DynDNS Updater.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\LogBoxItem.cs" />
+    <Compile Include="Logic\AutostartHelper.cs" />
     <Compile Include="Logic\Helper.cs" />
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
