Add autostart settings

--- a/dyndns updater/app.config
+++ b/dyndns updater/app.config
@@ -33,8 +33,11 @@
             <setting name="IPType" serializeAs="String">
                 <value />
             </setting>
-            <setting name="UpdateSettings" serializeAs="String">
+            <setting name="SystemUpdateSettings" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="SystemAutostartEnabled" serializeAs="String">
+                <value>False</value>
             </setting>
         </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
@@ -47,8 +50,11 @@
             <setting name="IPType" serializeAs="String">
                 <value />
             </setting>
-            <setting name="UpdateSettings" serializeAs="String">
+            <setting name="SystemUpdateSettings" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="SystemAutostartEnabled" serializeAs="String">
+                <value>False</value>
             </setting>
         </DynDNS_Updater.Properties.Settings>
     </userSettings>
