--- a/dyndns updater/Properties/Settings.settings
+++ b/dyndns updater/Properties/Settings.settings
@@ -14,8 +14,11 @@
     <Setting Name="SystemUpdateInterval" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1000</Value>
     </Setting>
-    <Setting Name="UpdateSettings" Type="System.Boolean" Scope="User">
+    <Setting Name="SystemUpdateSettings" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="SystemAutostartEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
