"Start minimized" option added

--- a/dyndns updater/app.config
+++ b/dyndns updater/app.config
@@ -39,6 +39,9 @@
             <setting name="SystemAutostartEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SystemStartMinimized" serializeAs="String">
+                <value>False</value>
+            </setting>
         </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="Username" serializeAs="String">
@@ -54,6 +57,9 @@
                 <value>True</value>
             </setting>
             <setting name="SystemAutostartEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SystemStartMinimized" serializeAs="String">
                 <value>False</value>
             </setting>
         </DynDNS_Updater.Properties.Settings>
