--- a/dyndns updater/Properties/Release.settings
+++ b/dyndns updater/Properties/Release.settings
@@ -20,5 +20,8 @@
     <Setting Name="SystemAutostartEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SystemStartMinimized" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
