LogFile Setings added

--- a/dyndns updater/app.config
+++ b/dyndns updater/app.config
@@ -42,6 +42,9 @@
             <setting name="SystemStartMinimized" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="SystemWriteLogFile" serializeAs="String">
+                <value>False</value>
+            </setting>
         </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="Username" serializeAs="String">
@@ -60,6 +63,9 @@
                 <value>False</value>
             </setting>
             <setting name="SystemStartMinimized" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SystemWriteLogFile" serializeAs="String">
                 <value>False</value>
             </setting>
         </DynDNS_Updater.Properties.Settings>
