--- a/dyndns updater/DynDNS Updater.csproj
+++ b/dyndns updater/DynDNS Updater.csproj
@@ -98,6 +98,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Logic\DynDNS.cs" />
+    <Compile Include="Logic\UpdateHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
