Fix Pause + Show hint for new version

--- a/dyndns updater/DynDNS Updater.csproj
+++ b/dyndns updater/DynDNS Updater.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\LogBoxItem.cs" />
+    <Compile Include="Logic\TrayHelper.cs" />
     <Compile Include="Settings\AppSettings.cs" />
     <Compile Include="Logic\AutostartHelper.cs" />
     <Compile Include="Logic\Helper.cs" />
