--- a/dyndns updater/app.config
+++ b/dyndns updater/app.config
@@ -15,10 +15,16 @@
             <setting name="SystemUpdateInterval" serializeAs="String">
                 <value>10000</value>
             </setting>
+            <setting name="SystemLockProvider" serializeAs="String">
+                <value>1</value>
+            </setting>
         </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="SystemUpdateInterval" serializeAs="String">
                 <value>5000</value>
+            </setting>
+            <setting name="SystemLockProvider" serializeAs="String">
+                <value>1</value>
             </setting>
         </DynDNS_Updater.Properties.Settings>
     </applicationSettings>
@@ -45,6 +51,9 @@
             <setting name="SystemWriteLogFile" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Provider" serializeAs="String">
+                <value>0</value>
+            </setting>
         </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="Username" serializeAs="String">
@@ -67,6 +76,9 @@
             </setting>
             <setting name="SystemWriteLogFile" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="Provider" serializeAs="String">
+                <value>0</value>
             </setting>
         </DynDNS_Updater.Properties.Settings>
     </userSettings>
