--- a/dyndns updater/Properties/Settings.settings
+++ b/dyndns updater/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="SystemWriteLogFile" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SystemLockProvider" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="Provider" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
