--- a/dyndns updater/DynDNS Updater.csproj
+++ b/dyndns updater/DynDNS Updater.csproj
@@ -102,6 +102,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Static.resx</DependentUpon>
     </Compile>
+    <Compile Include="Language\Window.de-DE.Designer.cs">
+      <DependentUpon>Window.de-DE.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Language\Window.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -157,6 +162,10 @@
     <EmbeddedResource Include="Language\Static.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Static.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Language\Window.de-DE.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Window.de-DE.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Language\Window.resx">
       <Generator>ResXFileCodeGenerator</Generator>
