--- a/dyndns updater/Properties/Settings.settings
+++ b/dyndns updater/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="Provider" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
