--- a/dyndns updater/app.config
+++ b/dyndns updater/app.config
@@ -54,6 +54,9 @@
             <setting name="Provider" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="Language" serializeAs="String">
+                <value />
+            </setting>
         </DynDNS_Updater.Properties.Release>
         <DynDNS_Updater.Properties.Settings>
             <setting name="Username" serializeAs="String">
@@ -79,6 +82,9 @@
             </setting>
             <setting name="Provider" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="Language" serializeAs="String">
+                <value />
             </setting>
         </DynDNS_Updater.Properties.Settings>
     </userSettings>
