--- a/dyndns updater/Properties/Release.settings
+++ b/dyndns updater/Properties/Release.settings
@@ -35,5 +35,8 @@
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Accounts" Type="DynDNS_Updater.Entities.AccountItemList" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
